Buttons for zooming fixed and canvas aligned. Retains their positions when resizing window.

--- a/web/web.css
+++ b/web/web.css
@@ -4,19 +4,51 @@
     text-align:center;
 }
 
-.map {
+#map {
     background-color: #FAFAFA;
-    height: 100vh;
-    width:  75vw;
+    height: 100%;
+    width:  75%;
+    margin: 0px;
     display: block;
+    position: fixed;
+    top: 45px;
+    left: 0px;
 }
 
-.mapButton["zoomInButton"] {
-    background-color: #FAFAFA;
-    
-    height: 30px; 
-    width:  30px; 
+.mapZoomButton {
+    cursor:pointer;
+    background:#E0E0E0;
+    color:#646464; 
+    width:30px;
+    height:30px;
+    margin:10px;
+    border:0px;
+    border-radius: 2px;
+    padding:0px;
+    -webkit-transition-duration:0.3s; /* Safari users */
+    transition-duration:0.3s;
+    display: inline-block;
+    font-family:"Inconsolata";
+    font-size:28px;
+    text-align:center;
 }
+
+.mapZoomButton:hover {
+    background:#EFEFEF;
+    color:#000000;
+}
+#zoomInButton {
+    position:fixed;
+    bottom:40px;
+    left:0px;
+}
+
+#zoomOutButton {
+    position:fixed;
+    bottom:0px;
+    left:0px;
+}
+
 .navbar {
     top:0;
     position:relative;
